--- a/pvt/README
+++ b/pvt/README
@@ -1,3 +1,3 @@
-pvt dir is used by EVA HMI to serve private content (camera images, room plans,
+pvt dir is used by EVA ICS HMI to serve private content (camera images, room plans,
 oid lists etc.) securely to avoid loading them by the UI app until a user is
 authenticated.
